[gd_scene load_steps=28 format=3 uid="uid://7wla607etupb"]

[ext_resource type="PackedScene" uid="uid://c2hauy3xvjbeo" path="res://Scenes/Objects/Field.tscn" id="1_at7km"]
[ext_resource type="Script" path="res://Scripts/Sun.gd" id="2_hxoty"]
[ext_resource type="PackedScene" uid="uid://2iqlbfxjg4i5" path="res://Scenes/GUI.tscn" id="3_uwbey"]
[ext_resource type="PackedScene" uid="uid://bmgklxbqopduw" path="res://Scenes/Objects/GameManager.tscn" id="4_rtjyc"]
[ext_resource type="Script" path="res://Scripts/GUI.gd" id="4_v36ir"]
[ext_resource type="Texture2D" uid="uid://dt27pqtr7jgvm" path="res://ASSETS/Sprites/Noise/frame_00_delay-0.05s.png" id="6_ty5c8"]
[ext_resource type="Texture2D" uid="uid://1wdr84hep0wr" path="res://ASSETS/Sprites/Noise/frame_01_delay-0.05s.png" id="7_jk7xj"]
[ext_resource type="Texture2D" uid="uid://dwuj52uvau7tj" path="res://ASSETS/Sprites/Noise/frame_02_delay-0.05s.png" id="8_rxyf2"]
[ext_resource type="Texture2D" uid="uid://cfwtonfqmb55q" path="res://ASSETS/Sprites/Noise/frame_03_delay-0.05s.png" id="9_4062d"]
[ext_resource type="Texture2D" uid="uid://80b7hn4pkvv7" path="res://ASSETS/Sprites/Noise/frame_04_delay-0.05s.png" id="10_d78mp"]
[ext_resource type="Texture2D" uid="uid://ddk412tn6lutc" path="res://ASSETS/Sprites/Noise/frame_05_delay-0.05s.png" id="11_yrbvs"]
[ext_resource type="Texture2D" uid="uid://c5p27uv8kp3m6" path="res://ASSETS/Sprites/Noise/frame_06_delay-0.05s.png" id="12_1d77c"]
[ext_resource type="Texture2D" uid="uid://bof8viofv8aju" path="res://ASSETS/Sprites/Noise/frame_07_delay-0.05s.png" id="13_miebj"]
[ext_resource type="Texture2D" uid="uid://bxqbp05j8p4lx" path="res://ASSETS/Sprites/Noise/frame_08_delay-0.05s.png" id="14_ns1s3"]
[ext_resource type="Script" path="res://Scripts/GameManagerIngame.gd" id="15_5pd01"]
[ext_resource type="Texture2D" uid="uid://dv6s5bq28c053" path="res://ASSETS/Sprites/Noise/frame_09_delay-0.05s.png" id="15_ffpsr"]
[ext_resource type="AudioStream" uid="uid://b4nl4ompfkwki" path="res://Sound/snd_death.mp3" id="17_lct64"]
[ext_resource type="AudioStream" uid="uid://c76iv1sula8lg" path="res://Sound/snd_night.mp3" id="18_77y7x"]
[ext_resource type="AudioStream" uid="uid://qhdhk3t1wbih" path="res://Sound/snd_food.mp3" id="19_2v8nl"]
[ext_resource type="AudioStream" uid="uid://8f1rnfsm1rll" path="res://Sound/snd_level_complete.mp3" id="20_vgwcy"]

[sub_resource type="Environment" id="Environment_4rtgn"]
background_mode = 3
background_color = Color(0.286275, 0.486275, 0.509804, 1)
tonemap_mode = 2
tonemap_exposure = 1.49
tonemap_white = 3.05
glow_enabled = true
glow_intensity = 1.85
glow_strength = 0.69
glow_bloom = 0.3
glow_blend_mode = 1
glow_hdr_threshold = 0.01
fog_light_color = Color(0.858824, 0, 0.956863, 1)
fog_light_energy = 10.7
fog_sun_scatter = 1.0
fog_density = 1.3715
fog_height = 20.6
volumetric_fog_density = 1.0
volumetric_fog_albedo = Color(1, 0, 0.298039, 1)
volumetric_fog_emission_energy = 1024.0
volumetric_fog_gi_inject = 0.0
adjustment_enabled = true
adjustment_contrast = 0.94
adjustment_saturation = 1.42

[sub_resource type="Curve" id="Curve_hatyc"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.503226, 0.221005), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_83i50"]
curve = SubResource("Curve_hatyc")

[sub_resource type="Curve" id="Curve_ctabu"]
max_value = 3.0
_data = [Vector2(0, 0.135309), 0.0, 0.0, 0, 0, Vector2(1, 1.8692), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5vurk"]
curve = SubResource("Curve_ctabu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5my7r"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(6.71, 7.755, 1)
emission_shape = 1
emission_sphere_radius = 128.0
orbit_velocity_min = -0.04
orbit_velocity_max = 0.04
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
radial_accel_min = 2.08167e-15
radial_accel_max = 2.08167e-15
scale_max = 3.0
scale_over_velocity_curve = SubResource("CurveTexture_5vurk")
alpha_curve = SubResource("CurveTexture_83i50")

[sub_resource type="SpriteFrames" id="SpriteFrames_dwic7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ty5c8")
}, {
"duration": 1.0,
"texture": ExtResource("7_jk7xj")
}, {
"duration": 1.0,
"texture": ExtResource("8_rxyf2")
}, {
"duration": 1.0,
"texture": ExtResource("9_4062d")
}, {
"duration": 1.0,
"texture": ExtResource("10_d78mp")
}, {
"duration": 1.0,
"texture": ExtResource("11_yrbvs")
}, {
"duration": 1.0,
"texture": ExtResource("12_1d77c")
}, {
"duration": 1.0,
"texture": ExtResource("13_miebj")
}, {
"duration": 1.0,
"texture": ExtResource("14_ns1s3")
}, {
"duration": 1.0,
"texture": ExtResource("15_ffpsr")
}],
"loop": true,
"name": &"noise",
"speed": 12.0
}]

[node name="Node2D" type="Node2D"]

[node name="Field" parent="." instance=ExtResource("1_at7km")]

[node name="Sun" type="DirectionalLight2D" parent="."]
position = Vector2(0, -128)
rotation = 1.0472
color = Color(1, 0.670588, 0.545098, 1)
shadow_color = Color(1, 0.239216, 0.780392, 0)
shadow_filter = 1
script = ExtResource("2_hxoty")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4rtgn")

[node name="GUI" parent="." instance=ExtResource("3_uwbey")]
offset_top = 736.0
offset_bottom = 736.0
script = ExtResource("4_v36ir")

[node name="BGColor" type="ColorRect" parent="."]
z_index = -3
offset_right = 1280.0
offset_bottom = 960.0
mouse_filter = 2
color = Color(0.0235294, 0.00784314, 0, 1)

[node name="BGParticles" type="GPUParticles2D" parent="."]
position = Vector2(640, 448)
amount = 200
process_material = SubResource("ParticleProcessMaterial_5my7r")
lifetime = 4.0
preprocess = 2.0
fixed_fps = 60
trail_lifetime = 2.14
trail_sections = 12
trail_section_subdivisions = 8

[node name="Noise" type="AnimatedSprite2D" parent="."]
modulate = Color(0.00784314, 0.00784314, 0.00784314, 1)
z_index = -4
position = Vector2(640, 480)
scale = Vector2(2.13333, 2.4)
sprite_frames = SubResource("SpriteFrames_dwic7")
animation = &"noise"
frame_progress = 0.515472

[node name="GameManager" parent="." instance=ExtResource("4_rtjyc")]
position = Vector2(43, -34)
script = ExtResource("15_5pd01")

[node name="AudioDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_lct64")

[node name="AudioNight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_77y7x")
volume_db = -14.158

[node name="AudioFood" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_2v8nl")
volume_db = -7.623

[node name="AudioLvlComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_vgwcy")
volume_db = -20.147
